Trying to fix dark mode switch on mobile | Commit 10

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -1,7 +1,6 @@
 @import "main";
 
 :root {
-  --hashtag-colors-chakra-body-bg: teal;
   --primary: #ffffff;
   --primary-2: #f1f3f5;
   --secondary: #000000;
